docusaurus/angular_versioned_docs/version-5/services/ChannelService.mdx
# ChannelService

The `ChannelService` provides data and interaction for the channel list and message list.

## Type parameters

| Name | Type                                                              |
| :--- | :---------------------------------------------------------------- |
| `T`  | extends `DefaultStreamChatGenerics` = `DefaultStreamChatGenerics` |

## Properties

### activeChannel$

• **activeChannel$**: `Observable`\<`undefined` \| `Channel`\<`T`\>\>

Emits the currently active channel.

:::important
If you want to subscribe to channel events, you need to manually reenter Angular's change detection zone, our [Change detection guide](../concepts/change-detection.mdx) explains this in detail.
:::

The active channel will always be marked as read when a new message is received

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:99](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L99)

---

### activeChannelLastReadMessageId

• `Optional` **activeChannelLastReadMessageId**: `string`

The last read message id of the active channel, it's used by the message list component to display unread UI, and jump to latest read message

This property isn't always updated, please use `channel.read` to display up-to-date read information

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:151](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L151)

---

### activeChannelMessages$

• **activeChannelMessages$**: `Observable`\<`StreamMessage`\<`T`\>[]\>

Emits the list of currently loaded messages of the active channel.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:103](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L103)

---

### activeChannelPinnedMessages$

• **activeChannelPinnedMessages$**: `Observable`\<`StreamMessage`\<`T`\>[]\>

Emits the list of pinned messages of the active channel.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:107](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L107)

---

### activeChannelUnreadCount

• `Optional` **activeChannelUnreadCount**: `number`

The unread count of the active channel, it's used by the message list component to display unread UI

This property isn't always updated, please use `channel.read` to display up-to-date read information

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:157](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L157)

---

### activeParentMessage$

• **activeParentMessage$**: `Observable`\<`undefined` \| `StreamMessage`\<`T`\>\>

Emits the currently selected parent message. If no message is selected, it emits undefined.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:119](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L119)

---

### activeParentMessageId$

• **activeParentMessageId$**: `Observable`\<`undefined` \| `string`\>

Emits the id of the currently selected parent message. If no message is selected, it emits undefined.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:111](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L111)

---

### activeThreadMessages$

• **activeThreadMessages$**: `Observable`\<`StreamMessage`\<`T`\>[]\>

Emits the list of currently loaded thread replies belonging to the selected parent message. If there is no currently active thread it emits an empty array.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:115](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L115)

---

### beforeSendMessage

• `Optional` **beforeSendMessage**: (`input`: `MessageInput`\<`T`\>) => `MessageInput`\<`T`\> \| `Promise`\<`MessageInput`\<`T`\>\>

The provided method will be called before a new message is sent to Stream's API. You can use this hook to tranfrom or enrich the message being sent.

#### Type declaration

▸ (`input`): `MessageInput`\<`T`\> \| `Promise`\<`MessageInput`\<`T`\>\>

##### Parameters

| Name    | Type                  |
| :------ | :-------------------- |
| `input` | `MessageInput`\<`T`\> |

##### Returns

`MessageInput`\<`T`\> \| `Promise`\<`MessageInput`\<`T`\>\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:324](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L324)

---

### beforeUpdateMessage

• `Optional` **beforeUpdateMessage**: (`message`: `StreamMessage`\<`T`\>) => `StreamMessage`\<`T`\> \| `Promise`\<`StreamMessage`\<`T`\>\>

The provided method will be called before a message is sent to Stream's API for update. You can use this hook to tranfrom or enrich the message being updated.

#### Type declaration

▸ (`message`): `StreamMessage`\<`T`\> \| `Promise`\<`StreamMessage`\<`T`\>\>

##### Parameters

| Name      | Type                   |
| :-------- | :--------------------- |
| `message` | `StreamMessage`\<`T`\> |

##### Returns

`StreamMessage`\<`T`\> \| `Promise`\<`StreamMessage`\<`T`\>\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:330](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L330)

---

### bouncedMessage$

• **bouncedMessage$**: `BehaviorSubject`\<`undefined` \| `StreamMessage`\<`T`\>\>

If you're using [semantic filters for moderation](https://getstream.io/automated-moderation/docs/automod_configuration/?q=semantic%20filters) you can set up rules for bouncing messages.

If a message is bounced, it will be emitted via this `Observable`. The built-in [`MessageBouncePrompt` component](../../components/MessageBouncePromptComponent) will display the bounce option to the user if a bounced message is clicked.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:145](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L145)

---

### channelQueryState$

• **channelQueryState$**: `Observable`\<`undefined` \| `ChannelQueryState`\>

The result of the latest channel query request.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:89](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L89)

---

### channels$

• **channels$**: `Observable`\<`undefined` \| `Channel`\<`T`\>[]\>

Emits the currently loaded and [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel list.

:::important
If you want to subscribe to channel events, you need to manually reenter Angular's change detection zone, our [Change detection guide](../concepts/change-detection.mdx) explains this in detail.
:::

Apart from pagination, the channel list is also updated on the following events:

| Event type                          | Default behavior                                                   | Custom handler to override                    |
| ----------------------------------- | ------------------------------------------------------------------ | --------------------------------------------- |
| `channel.deleted`                   | Remove channel from the list                                       | `customChannelDeletedHandler`                 |
| `channel.hidden`                    | Remove channel from the list                                       | `customChannelHiddenHandler`                  |
| `channel.truncated`                 | Updates the channel                                                | `customChannelTruncatedHandler`               |
| `channel.updated`                   | Updates the channel                                                | `customChannelUpdatedHandler`                 |
| `channel.visible`                   | Adds the channel to the list                                       | `customChannelVisibleHandler`                 |
| `message.new`                       | Moves the channel to top of the list                               | `customNewMessageHandler`                     |
| `notification.added_to_channel`     | Adds the new channel to the top of the list and starts watching it | `customAddedToChannelNotificationHandler`     |
| `notification.message_new`          | Adds the new channel to the top of the list and starts watching it | `customNewMessageNotificationHandler`         |
| `notification.removed_from_channel` | Removes the channel from the list                                  | `customRemovedFromChannelNotificationHandler` |

It's important to note that filters don't apply to updates to the list from events.

Our platform documentation covers the topic of [channel events](https://getstream.io/chat/docs/javascript/event_object/?language=javascript#events) in depth.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:85](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L85)

---

### customAddedToChannelNotificationHandler

• `Optional` **customAddedToChannelNotificationHandler**: (`clientEvent`: `ClientEvent`\<`DefaultStreamChatGenerics`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`) => `void`

Custom event handler to call when the user is added to a channel, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`clientEvent`, `channelListSetter`): `void`

##### Parameters

| Name                | Type                                                                                        |
| :------------------ | :------------------------------------------------------------------------------------------ |
| `clientEvent`       | `ClientEvent`\<`DefaultStreamChatGenerics`\>                                                |
| `channelListSetter` | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:175](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L175)

---

### customChannelDeletedHandler

• `Optional` **customChannelDeletedHandler**: (`event`: `Event`\<`DefaultGenerics`\>, `channel`: `Channel`\<`T`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`, `messageListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `threadListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `parentMessageSetter`: (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`) => `void`

Custom event handler to call when a channel is deleted, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`event`, `channel`, `channelListSetter`, `messageListSetter`, `threadListSetter`, `parentMessageSetter`): `void`

##### Parameters

| Name                  | Type                                                                                        |
| :-------------------- | :------------------------------------------------------------------------------------------ |
| `event`               | `Event`\<`DefaultGenerics`\>                                                                |
| `channel`             | `Channel`\<`T`\>                                                                            |
| `channelListSetter`   | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |
| `messageListSetter`   | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `threadListSetter`    | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `parentMessageSetter` | (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`                                |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:199](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L199)

---

### customChannelHiddenHandler

• `Optional` **customChannelHiddenHandler**: (`event`: `Event`\<`DefaultGenerics`\>, `channel`: `Channel`\<`T`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`, `messageListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `threadListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `parentMessageSetter`: (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`) => `void`

Custom event handler to call when a channel becomes hidden, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`event`, `channel`, `channelListSetter`, `messageListSetter`, `threadListSetter`, `parentMessageSetter`): `void`

##### Parameters

| Name                  | Type                                                                                        |
| :-------------------- | :------------------------------------------------------------------------------------------ |
| `event`               | `Event`\<`DefaultGenerics`\>                                                                |
| `channel`             | `Channel`\<`T`\>                                                                            |
| `channelListSetter`   | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |
| `messageListSetter`   | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `threadListSetter`    | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `parentMessageSetter` | (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`                                |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:247](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L247)

---

### customChannelTruncatedHandler

• `Optional` **customChannelTruncatedHandler**: (`event`: `Event`\<`DefaultGenerics`\>, `channel`: `Channel`\<`T`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`, `messageListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `threadListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `parentMessageSetter`: (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`) => `void`

Custom event handler to call when a channel is truncated, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`event`, `channel`, `channelListSetter`, `messageListSetter`, `threadListSetter`, `parentMessageSetter`): `void`

##### Parameters

| Name                  | Type                                                                                        |
| :-------------------- | :------------------------------------------------------------------------------------------ |
| `event`               | `Event`\<`DefaultGenerics`\>                                                                |
| `channel`             | `Channel`\<`T`\>                                                                            |
| `channelListSetter`   | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |
| `messageListSetter`   | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `threadListSetter`    | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `parentMessageSetter` | (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`                                |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:231](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L231)

---

### customChannelUpdatedHandler

• `Optional` **customChannelUpdatedHandler**: (`event`: `Event`\<`DefaultGenerics`\>, `channel`: `Channel`\<`T`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`, `messageListSetter`: (`messages`: `StreamMessage`\<`DefaultStreamChatGenerics`\>[]) => `void`, `threadListSetter`: (`messages`: `StreamMessage`\<`DefaultStreamChatGenerics`\>[]) => `void`, `parentMessageSetter`: (`message`: `undefined` \| `StreamMessage`\<`DefaultStreamChatGenerics`\>) => `void`) => `void`

Custom event handler to call when a channel is updated, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`event`, `channel`, `channelListSetter`, `messageListSetter`, `threadListSetter`, `parentMessageSetter`): `void`

##### Parameters

| Name                  | Type                                                                                        |
| :-------------------- | :------------------------------------------------------------------------------------------ |
| `event`               | `Event`\<`DefaultGenerics`\>                                                                |
| `channel`             | `Channel`\<`T`\>                                                                            |
| `channelListSetter`   | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |
| `messageListSetter`   | (`messages`: `StreamMessage`\<`DefaultStreamChatGenerics`\>[]) => `void`                    |
| `threadListSetter`    | (`messages`: `StreamMessage`\<`DefaultStreamChatGenerics`\>[]) => `void`                    |
| `parentMessageSetter` | (`message`: `undefined` \| `StreamMessage`\<`DefaultStreamChatGenerics`\>) => `void`        |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:215](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L215)

---

### customChannelVisibleHandler

• `Optional` **customChannelVisibleHandler**: (`event`: `Event`\<`DefaultGenerics`\>, `channel`: `Channel`\<`T`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`, `messageListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `threadListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `parentMessageSetter`: (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`) => `void`

Custom event handler to call when a channel becomes visible, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`event`, `channel`, `channelListSetter`, `messageListSetter`, `threadListSetter`, `parentMessageSetter`): `void`

##### Parameters

| Name                  | Type                                                                                        |
| :-------------------- | :------------------------------------------------------------------------------------------ |
| `event`               | `Event`\<`DefaultGenerics`\>                                                                |
| `channel`             | `Channel`\<`T`\>                                                                            |
| `channelListSetter`   | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |
| `messageListSetter`   | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `threadListSetter`    | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `parentMessageSetter` | (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`                                |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:263](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L263)

---

### customFileDeleteRequest

• `Optional` **customFileDeleteRequest**: (`url`: `string`, `channel`: `Channel`\<`T`\>) => `Promise`\<`void`\>

You can override the default file delete request - override this if you use your own CDN

#### Type declaration

▸ (`url`, `channel`): `Promise`\<`void`\>

##### Parameters

| Name      | Type             |
| :-------- | :--------------- |
| `url`     | `string`         |
| `channel` | `Channel`\<`T`\> |

##### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:307](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L307)

---

### customFileUploadRequest

• `Optional` **customFileUploadRequest**: (`file`: `File`, `channel`: `Channel`\<`T`\>) => `Promise`\<\{ `file`: `string` }\>

You can override the default file upload request - you can use this to upload files to your own CDN

#### Type declaration

▸ (`file`, `channel`): `Promise`\<\{ `file`: `string` }\>

##### Parameters

| Name      | Type             |
| :-------- | :--------------- |
| `file`    | `File`           |
| `channel` | `Channel`\<`T`\> |

##### Returns

`Promise`\<\{ `file`: `string` }\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:293](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L293)

---

### customImageDeleteRequest

• `Optional` **customImageDeleteRequest**: (`url`: `string`, `channel`: `Channel`\<`T`\>) => `Promise`\<`void`\>

You can override the default image delete request - override this if you use your own CDN

#### Type declaration

▸ (`url`, `channel`): `Promise`\<`void`\>

##### Parameters

| Name      | Type             |
| :-------- | :--------------- |
| `url`     | `string`         |
| `channel` | `Channel`\<`T`\> |

##### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:311](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L311)

---

### customImageUploadRequest

• `Optional` **customImageUploadRequest**: (`file`: `File`, `channel`: `Channel`\<`T`\>) => `Promise`\<\{ `file`: `string` }\>

You can override the default image upload request - you can use this to upload images to your own CDN

#### Type declaration

▸ (`file`, `channel`): `Promise`\<\{ `file`: `string` }\>

##### Parameters

| Name      | Type             |
| :-------- | :--------------- |
| `file`    | `File`           |
| `channel` | `Channel`\<`T`\> |

##### Returns

`Promise`\<\{ `file`: `string` }\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:300](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L300)

---

### customNewMessageHandler

• `Optional` **customNewMessageHandler**: (`event`: `Event`\<`DefaultGenerics`\>, `channel`: `Channel`\<`T`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`, `messageListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `threadListSetter`: (`messages`: `StreamMessage`\<`T`\>[]) => `void`, `parentMessageSetter`: (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`) => `void`

Custom event handler to call if a new message received from a channel that is being watched, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`event`, `channel`, `channelListSetter`, `messageListSetter`, `threadListSetter`, `parentMessageSetter`): `void`

##### Parameters

| Name                  | Type                                                                                        |
| :-------------------- | :------------------------------------------------------------------------------------------ |
| `event`               | `Event`\<`DefaultGenerics`\>                                                                |
| `channel`             | `Channel`\<`T`\>                                                                            |
| `channelListSetter`   | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |
| `messageListSetter`   | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `threadListSetter`    | (`messages`: `StreamMessage`\<`T`\>[]) => `void`                                            |
| `parentMessageSetter` | (`message`: `undefined` \| `StreamMessage`\<`T`\>) => `void`                                |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:279](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L279)

---

### customNewMessageNotificationHandler

• `Optional` **customNewMessageNotificationHandler**: (`clientEvent`: `ClientEvent`\<`DefaultStreamChatGenerics`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`) => `void`

Custom event handler to call if a new message received from a channel that is not being watched, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels)

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`clientEvent`, `channelListSetter`): `void`

##### Parameters

| Name                | Type                                                                                        |
| :------------------ | :------------------------------------------------------------------------------------------ |
| `clientEvent`       | `ClientEvent`\<`DefaultStreamChatGenerics`\>                                                |
| `channelListSetter` | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:163](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L163)

---

### customRemovedFromChannelNotificationHandler

• `Optional` **customRemovedFromChannelNotificationHandler**: (`clientEvent`: `ClientEvent`\<`DefaultStreamChatGenerics`\>, `channelListSetter`: (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void`) => `void`

Custom event handler to call when the user is removed from a channel, provide an event handler if you want to override the [default channel list ordering](./ChannelService.mdx/#channels).

If you're adding a new channel, make sure that it's a [watched](https://getstream.io/chat/docs/javascript/watch_channel/?language=javascript) channel.

#### Type declaration

▸ (`clientEvent`, `channelListSetter`): `void`

##### Parameters

| Name                | Type                                                                                        |
| :------------------ | :------------------------------------------------------------------------------------------ |
| `clientEvent`       | `ClientEvent`\<`DefaultStreamChatGenerics`\>                                                |
| `channelListSetter` | (`channels`: `Channel`\<`T`\>[], `shouldStopWatchingRemovedChannels?`: `boolean`) => `void` |

##### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:187](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L187)

---

### hasMoreChannels$

• **hasMoreChannels$**: `Observable`\<`boolean`\>

Emits `false` if there are no more pages of channels that can be loaded.

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:58](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L58)

---

### jumpToMessage$

• **jumpToMessage$**: `Observable`\<\{ `id?`: `string` ; `parentId?`: `string` }\>

Emits the ID of the message the message list should jump to (can be a channel message or thread message)

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:127](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L127)

---

### latestMessageDateByUserByChannels$

• **latestMessageDateByUserByChannels$**: `Observable`\<\{ `[key: string]`: `Date`; }\>

Emits a map that contains the date of the latest message sent by the current user by channels (this is used to detect if slow mode countdown should be started)

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:139](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L139)

---

### messageDeleteConfirmationHandler

• `Optional` **messageDeleteConfirmationHandler**: (`message`: `StreamMessage`\<`T`\>) => `Promise`\<`boolean`\>

The provided method will be called before deleting a message. If the returned Promise resolves to `true` to deletion will go ahead. If `false` is returned, the message won't be deleted.

#### Type declaration

▸ (`message`): `Promise`\<`boolean`\>

##### Parameters

| Name      | Type                   |
| :-------- | :--------------------- |
| `message` | `StreamMessage`\<`T`\> |

##### Returns

`Promise`\<`boolean`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:318](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L318)

---

### messageToQuote$

• **messageToQuote$**: `Observable`\<`undefined` \| `StreamMessage`\<`T`\>\>

Emits the currently selected message to quote

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:123](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L123)

---

### usersTypingInChannel$

• **usersTypingInChannel$**: `Observable`\<`UserResponse`\<`T`\>[]\>

Emits the list of users that are currently typing in the channel (current user is not included)

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:131](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L131)

---

### usersTypingInThread$

• **usersTypingInThread$**: `Observable`\<`UserResponse`\<`T`\>[]\>

Emits the list of users that are currently typing in the active thread (current user is not included)

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:135](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L135)

---

### MAX_MESSAGE_COUNT_IN_MESSAGE_LIST

▪ `Static` `Readonly` **MAX_MESSAGE_COUNT_IN_MESSAGE_LIST**: `250`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:336](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L336)

---

### MAX_MESSAGE_REACTIONS_TO_FETCH

▪ `Static` `Readonly` **MAX_MESSAGE_REACTIONS_TO_FETCH**: `1200`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:340](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L340)

## Accessors

### activeChannel

• `get` **activeChannel**(): `undefined` \| `Channel`\<`T`\>

The current active channel

#### Returns

`undefined` \| `Channel`\<`T`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1650](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1650)

---

### activeChannelMessages

• `get` **activeChannelMessages**(): (`StreamMessage`\<`T`\> \| `MessageResponse`\<`T`\> \| `FormatMessageResponse`\<`T`\>)[]

The current active channel messages

#### Returns

(`StreamMessage`\<`T`\> \| `MessageResponse`\<`T`\> \| `FormatMessageResponse`\<`T`\>)[]

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1657](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1657)

---

### channels

• `get` **channels**(): `Channel`\<`T`\>[]

The current list of channels

#### Returns

`Channel`\<`T`\>[]

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1643](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1643)

---

### customPaginator

• `set` **customPaginator**(`paginator`): `void`

By default the SDK uses an offset based pagination, you can change/extend this by providing your own custom paginator method.

The method will be called with the result of the latest channel query.

You can return either an offset, or a filter using the [`$lte`/`$gte` operator](https://getstream.io/chat/docs/javascript/query_syntax_operators/). If you return a filter, it will be merged with the filter provided for the `init` method.

#### Parameters

| Name        | Type                                                                                 |
| :---------- | :----------------------------------------------------------------------------------- |
| `paginator` | `undefined` \| (`channelQueryResult`: `Channel`\<`T`\>[]) => `NextPageConfiguration` |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:589](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L589)

---

### shouldMarkActiveChannelAsRead

• `get` **shouldMarkActiveChannelAsRead**(): `boolean`

If set to false, read events won't be sent as new messages are received. If set to true active channel (if any) will immediately be marked as read.

#### Returns

`boolean`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:565](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L565)

• `set` **shouldMarkActiveChannelAsRead**(`shouldMarkActiveChannelAsRead`): `void`

If set to false, read events won't be sent as new messages are received. If set to true active channel (if any) will immediately be marked as read.

#### Parameters

| Name                            | Type      |
| :------------------------------ | :-------- |
| `shouldMarkActiveChannelAsRead` | `boolean` |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:572](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L572)

## Methods

### addChannel

▸ **addChannel**(`channel`): `void`

Add a new channel to the channel list
The channel will be added to the beginning of the channel list

#### Parameters

| Name      | Type             |
| :-------- | :--------------- |
| `channel` | `Channel`\<`T`\> |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1164](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1164)

---

### addReaction

▸ **addReaction**(`messageId`, `reactionType`, `customData?`): `Promise`\<`void`\>

Adds a reaction to a message.

#### Parameters

| Name           | Type                    | Description                                  |
| :------------- | :---------------------- | :------------------------------------------- |
| `messageId`    | `string`                | The id of the message to add the reaction to |
| `reactionType` | `string`                | The type of the reaction                     |
| `customData?`  | `T`[``"reactionType"``] |                                              |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:841](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L841)

---

### autocompleteMembers

▸ **autocompleteMembers**(`searchTerm`): `Promise`\<`ChannelMemberResponse`\<`T`\>[]\>

Returns the autocomplete options for current channel members. If the channel has less than 100 members, it returns the channel members, otherwise sends a [search request](https://getstream.io/chat/docs/javascript/query_members/?language=javascript#pagination-and-ordering) with the given search term.

#### Parameters

| Name         | Type     | Description                                |
| :----------- | :------- | :----------------------------------------- |
| `searchTerm` | `string` | Text to search for in the names of members |

#### Returns

`Promise`\<`ChannelMemberResponse`\<`T`\>[]\>

The list of members matching the search filter

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1091](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1091)

---

### clearMessageJump

▸ **clearMessageJump**(): `void`

Clears the currently selected message to jump

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1288](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1288)

---

### deleteAttachment

▸ **deleteAttachment**(`attachmentUpload`): `Promise`\<`void`\>

Deletes an uploaded file by URL. If you want to know more about [file uploads](https://getstream.io/chat/docs/javascript/file_uploads/?language=javascript) check out the platform documentation

#### Parameters

| Name               | Type                                              | Description                                                                             |
| :----------------- | :------------------------------------------------ | :-------------------------------------------------------------------------------------- |
| `attachmentUpload` | `AttachmentUpload`\<`DefaultStreamChatGenerics`\> | Attachment to be deleted (output of the [`AttachmentService`](./AttachmentService.mdx)) |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1075](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1075)

---

### deleteMessage

▸ **deleteMessage**(`message`, `isLocalDelete?`): `Promise`\<`void`\>

Deletes the message from the active channel

#### Parameters

| Name            | Type                                           | Default value | Description                                                                                                       |
| :-------------- | :--------------------------------------------- | :------------ | :---------------------------------------------------------------------------------------------------------------- |
| `message`       | `StreamMessage`\<`DefaultStreamChatGenerics`\> | `undefined`   | Message to be deleted                                                                                             |
| `isLocalDelete` | `boolean`                                      | `false`       | set this `true` if you want to delete a message that's only part of the local state, not yet saved on the backend |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:963](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L963)

---

### deselectActiveChannel

▸ **deselectActiveChannel**(): `void`

Deselects the currently active (if any) channel

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:637](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L637)

---

### getMessageReactions

▸ **getMessageReactions**(`messageId`): `Promise`\<`ReactionResponse`\<`T`\>[]\>

Get the last 1200 reactions of a message in the current active channel. If you need to fetch more reactions please use the [following endpoint](https://getstream.io/chat/docs/javascript/send_reaction/?language=javascript#paginating-reactions).

#### Parameters

| Name        | Type     |
| :---------- | :------- |
| `messageId` | `string` |

#### Returns

`Promise`\<`ReactionResponse`\<`T`\>[]\>

all reactions of a message

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1666](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1666)

---

### init

▸ **init**(`filters`, `sort?`, `options?`, `shouldSetActiveChannel?`): `Promise`\<`Channel`\<`T`\>[]\>

Queries the channels with the given filters, sorts and options. More info about [channel querying](https://getstream.io/chat/docs/javascript/query_channels/?language=javascript) can be found in the platform documentation. By default the first channel in the list will be set as active channel and will be marked as read.

#### Parameters

| Name                     | Type                    | Default value | Description                                                                            |
| :----------------------- | :---------------------- | :------------ | :------------------------------------------------------------------------------------- |
| `filters`                | `ChannelFilters`\<`T`\> | `undefined`   |                                                                                        |
| `sort?`                  | `ChannelSort`\<`T`\>    | `undefined`   |                                                                                        |
| `options?`               | `ChannelOptions`        | `undefined`   |                                                                                        |
| `shouldSetActiveChannel` | `boolean`               | `true`        | Decides if the first channel in the result should be made as an active channel or not. |

#### Returns

`Promise`\<`Channel`\<`T`\>[]\>

the list of channels found by the query

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:767](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L767)

---

### initWithCustomQuery

▸ **initWithCustomQuery**(`query`, `options?`): `Promise`\<`Channel`\<`T`\>[]\>

Queries the channels with the given query function. More info about [channel querying](https://getstream.io/chat/docs/javascript/query_channels/?language=javascript) can be found in the platform documentation.

#### Parameters

| Name                             | Type                                                                          | Description                                                                                                                                   |
| :------------------------------- | :---------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------- |
| `query`                          | (`queryType`: `ChannelQueryType`) => `Promise`\<`ChannelQueryResult`\<`T`\>\> |                                                                                                                                               |
| `options`                        | `Object`                                                                      | The `shouldSetActiveChannel` specifies if the first channel in the result should be selected as the active channel or not. Default is `true`. |
| `options.messagePageSize`        | `number`                                                                      | -                                                                                                                                             |
| `options.shouldSetActiveChannel` | `boolean`                                                                     | -                                                                                                                                             |

#### Returns

`Promise`\<`Channel`\<`T`\>[]\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:801](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L801)

---

### jumpToMessage

▸ **jumpToMessage**(`messageId`, `parentMessageId?`): `Promise`\<`void`\>

Jumps to the selected message inside the message list, if the message is not yet loaded, it'll load the message (and it's surroundings) from the API.

#### Parameters

| Name               | Type     | Description                                                                    |
| :----------------- | :------- | :----------------------------------------------------------------------------- |
| `messageId`        | `string` | The ID of the message to be loaded, 'latest' means jump to the latest messages |
| `parentMessageId?` | `string` | The ID of the parent message if we want to load a thread message               |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1260](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1260)

---

### loadMoreChannels

▸ **loadMoreChannels**(): `Promise`\<`void`\>

Loads the next page of channels. The page size can be set in the [query option](https://getstream.io/chat/docs/javascript/query_channels/?language=javascript#query-options) object.

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:831](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L831)

---

### loadMoreMessages

▸ **loadMoreMessages**(`direction?`): `undefined` \| `false` \| `Promise`\<`QueryChannelAPIResponse`\<`T`\>\>

Loads the next page of messages of the active channel. The page size can be set in the [query option](https://getstream.io/chat/docs/javascript/query_channels/?language=javascript#query-options) object.

#### Parameters

| Name        | Type                   | Default value |
| :---------- | :--------------------- | :------------ |
| `direction` | `"older"` \| `"newer"` | `'older'`     |

#### Returns

`undefined` \| `false` \| `Promise`\<`QueryChannelAPIResponse`\<`T`\>\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:698](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L698)

---

### loadMoreThreadReplies

▸ **loadMoreThreadReplies**(`direction?`): `Promise`\<`void`\>

Loads the next page of messages of the active thread. The page size can be set in the [query option](https://getstream.io/chat/docs/javascript/query_channels/?language=javascript#query-options) object.

#### Parameters

| Name        | Type                   | Default value |
| :---------- | :--------------------- | :------------ |
| `direction` | `"older"` \| `"newer"` | `'older'`     |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:737](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L737)

---

### markMessageUnread

▸ **markMessageUnread**(`messageId`): `Promise`\<`undefined` \| `null` \| `APIResponse`\>

Marks the channel from the given message as unread

#### Parameters

| Name        | Type     |
| :---------- | :------- |
| `messageId` | `string` |

#### Returns

`Promise`\<`undefined` \| `null` \| `APIResponse`\>

the result of the request

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1699](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1699)

---

### pinMessage

▸ **pinMessage**(`message`): `Promise`\<`void`\>

Pins the given message in the channel

#### Parameters

| Name      | Type                                           |
| :-------- | :--------------------------------------------- |
| `message` | `StreamMessage`\<`DefaultStreamChatGenerics`\> |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1296](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1296)

---

### removeOldMessageFromMessageList

▸ **removeOldMessageFromMessageList**(): `void`

internal

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:543](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L543)

---

### removeReaction

▸ **removeReaction**(`messageId`, `reactionType`): `Promise`\<`void`\>

Removes a reaction from a message.

#### Parameters

| Name           | Type     | Description                                       |
| :------------- | :------- | :------------------------------------------------ |
| `messageId`    | `string` | The id of the message to remove the reaction from |
| `reactionType` | `string` | Thr type of reaction to remove                    |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:857](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L857)

---

### resendMessage

▸ **resendMessage**(`message`): `Promise`\<`StreamMessage`\<`T`\>\>

Resends the given message to the active channel

#### Parameters

| Name      | Type                                           | Description           |
| :-------- | :--------------------------------------------- | :-------------------- |
| `message` | `StreamMessage`\<`DefaultStreamChatGenerics`\> | The message to resend |

#### Returns

`Promise`\<`StreamMessage`\<`T`\>\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:911](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L911)

---

### reset

▸ **reset**(): `void`

Resets the `activeChannel$`, `channels$` and `activeChannelMessages$` Observables. Useful when disconnecting a chat user, use in combination with [`disconnectUser`](./ChatClientService.mdx/#disconnectuser).

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:815](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L815)

---

### selectMessageToQuote

▸ **selectMessageToQuote**(`message`): `void`

Selects or deselects the current message to quote reply to

#### Parameters

| Name      | Type                                                          | Description                                                                 |
| :-------- | :------------------------------------------------------------ | :-------------------------------------------------------------------------- |
| `message` | `undefined` \| `StreamMessage`\<`DefaultStreamChatGenerics`\> | The message to select, if called with `undefined`, it deselects the message |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1155](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1155)

---

### sendAction

▸ **sendAction**(`messageId`, `formData`, `parentMessageId?`): `Promise`\<`void`\>

[Runs a message action](https://getstream.io/chat/docs/rest/#messages-runmessageaction) in the current channel. Updates the message list based on the action result (if no message is returned, the message will be removed from the message list).

#### Parameters

| Name               | Type                           |
| :----------------- | :----------------------------- |
| `messageId`        | `string`                       |
| `formData`         | `Record`\<`string`, `string`\> |
| `parentMessageId?` | `string`                       |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1118](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1118)

---

### sendMessage

▸ **sendMessage**(`text`, `attachments?`, `mentionedUsers?`, `parentId?`, `quotedMessageId?`, `customData?`): `Promise`\<`StreamMessage`\<`T`\>\>

Sends a message to the active channel. The message is immediately added to the message list, if an error occurs and the message can't be sent, the error is indicated in `state` of the message.

#### Parameters

| Name              | Type                                               | Default value | Description                                           |
| :---------------- | :------------------------------------------------- | :------------ | :---------------------------------------------------- |
| `text`            | `string`                                           | `undefined`   | The text of the message                               |
| `attachments`     | `Attachment`\<`T`\>[]                              | `[]`          | The attachments                                       |
| `mentionedUsers`  | `UserResponse`\<`T`\>[]                            | `[]`          | Mentioned users                                       |
| `parentId`        | `undefined` \| `string`                            | `undefined`   | Id of the parent message (if sending a thread reply)  |
| `quotedMessageId` | `undefined` \| `string`                            | `undefined`   | Id of the message to quote (if sending a quote reply) |
| `customData`      | `undefined` \| `Partial`\<`T`[``"messageType"``]\> | `undefined`   |                                                       |

#### Returns

`Promise`\<`StreamMessage`\<`T`\>\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:872](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L872)

---

### setAsActiveChannel

▸ **setAsActiveChannel**(`channel`): `void`

Sets the given `channel` as active and marks it as read.
If the channel wasn't previously part of the channel, it will be added to the beginning of the list.

#### Parameters

| Name      | Type             |
| :-------- | :--------------- |
| `channel` | `Channel`\<`T`\> |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:605](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L605)

---

### setAsActiveParentMessage

▸ **setAsActiveParentMessage**(`message`, `loadMessagesForm?`): `Promise`\<`void`\>

Sets the given `message` as an active parent message. If `undefined` is provided, it will deleselect the current parent message.

#### Parameters

| Name               | Type                                  | Default value |
| :----------------- | :------------------------------------ | :------------ |
| `message`          | `undefined` \| `StreamMessage`\<`T`\> | `undefined`   |
| `loadMessagesForm` | `"state"` \| `"request"`              | `'request'`   |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:663](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L663)

---

### typingStarted

▸ **typingStarted**(`parentId?`): `Promise`\<`void`\>

Call this method if user started typing in the active channel

#### Parameters

| Name        | Type     | Description                                                 |
| :---------- | :------- | :---------------------------------------------------------- |
| `parentId?` | `string` | The id of the parent message, if user is typing in a thread |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1626](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1626)

---

### typingStopped

▸ **typingStopped**(`parentId?`): `Promise`\<`void`\>

Call this method if user stopped typing in the active channel

#### Parameters

| Name        | Type     | Description                                                   |
| :---------- | :------- | :------------------------------------------------------------ |
| `parentId?` | `string` | The id of the parent message, if user were typing in a thread |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1635](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1635)

---

### unpinMessage

▸ **unpinMessage**(`message`): `Promise`\<`void`\>

Removes the given message from pinned messages

#### Parameters

| Name      | Type                                           |
| :-------- | :--------------------------------------------- |
| `message` | `StreamMessage`\<`DefaultStreamChatGenerics`\> |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:1315](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L1315)

---

### updateMessage

▸ **updateMessage**(`message`): `Promise`\<`StreamMessage`\<`T`\> \| `T`[``"messageType"``] & {} & {} & {} & `Omit`\<`MessageResponse`\<{}\>, `"status"` \| `"created_at"` \| `"pinned_at"` \| `"updated_at"`\> & `UR` & {}\>

Updates the message in the active channel

#### Parameters

| Name      | Type                   | Description          |
| :-------- | :--------------------- | :------------------- |
| `message` | `StreamMessage`\<`T`\> | Mesage to be updated |

#### Returns

`Promise`\<`StreamMessage`\<`T`\> \| `T`[``"messageType"``] & {} & {} & {} & `Omit`\<`MessageResponse`\<{}\>, `"status"` \| `"created_at"` \| `"pinned_at"` \| `"updated_at"`\> & `UR` & {}\>

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:928](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L928)

---

### uploadAttachments

▸ **uploadAttachments**(`uploads`): `Promise`\<`AttachmentUpload`\<`DefaultStreamChatGenerics`\>[]\>

Uploads files to the channel. If you want to know more about [file uploads](https://getstream.io/chat/docs/javascript/file_uploads/?language=javascript) check out the platform documentation.

#### Parameters

| Name      | Type                                                | Description                                                                              |
| :-------- | :-------------------------------------------------- | :--------------------------------------------------------------------------------------- |
| `uploads` | `AttachmentUpload`\<`DefaultStreamChatGenerics`\>[] | the attachments to upload (output of the [`AttachmentService`](./AttachmentService.mdx)) |

#### Returns

`Promise`\<`AttachmentUpload`\<`DefaultStreamChatGenerics`\>[]\>

the result of file upload requests

#### Defined in

[projects/stream-chat-angular/src/lib/channel.service.ts:995](https://github.com/GetStream/stream-chat-angular/blob/150739c52b02ee3abdefefc5763069d28442052d/projects/stream-chat-angular/src/lib/channel.service.ts#L995)
